Up search-bar and fix ui header-full, header-medium, header-small, header-small-title

--- a/src/public/styles/components/review-popup.css
+++ b/src/public/styles/components/review-popup.css
@@ -94,6 +94,7 @@
     width: 64px;
     border-radius: 100%;
 }
+/*Nút thêm số lượng */
 
 .counter--wraper {
     display: flex;
@@ -105,6 +106,7 @@
     border-radius: 8px;
     align-items: center;
     justify-content: space-between;
+    cursor: pointer;
 }
 
 input#room__quantity {
