--- a/src/public/styles/partials/header-full.css
+++ b/src/public/styles/partials/header-full.css
@@ -41,14 +41,7 @@ header {
   justify-content: flex-end;
   align-items: center;
   flex-direction: row;
-  gap: 48px;
-}
-
-.header-container__nav-top a {
-  font-size: 22px;
-  text-decoration: none;
-  font-weight: 500;
-  color: var(--white);
+  gap: 8px;
 }
 
 .header-container__top-authenticator {
@@ -58,6 +51,7 @@ header {
 }
 
 /* Header with no login*/
+.header-container__nav-top button,
 .header-container__top-authenticator button {
   width: 128px;
   height: 48px;
@@ -75,10 +69,17 @@ header {
   }
 }
 
+.header-container__nav-top button {
+  background-color: transparent;
+  color: var(--white);
+}
+.header-container__nav-top button:hover {
+  background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5));
+}
+
 .header-container__top-authenticator .button-signup {
   color: var(--white);
   background-color: var(--primary-color-4);
-  margin: 4px;
 
   &:hover {
     box-shadow:
