--- a/src/views/partials/header-full.ejs
+++ b/src/views/partials/header-full.ejs
@@ -5,8 +5,8 @@
         <img src="/imgs/logo.svg" alt="Logo" />
       </div>
       <div class="header-container__nav-top">
-        <a href="#">Trang chủ</a>
-        <a href="#">Thông báo</a>
+        <button href="#" class="status-layer">Trang chủ</button>
+        <button href="#" class="status-layer">Thông báo</button>
       </div>
       <div class="header-container__top-authenticator">
         <!-- Header with no login -->
@@ -14,13 +14,13 @@
         <!-- <button type="button" class="button-signin">Đăng nhập</button>
         <button type="button" class="button-signup">Đăng ký</button> -->
 
-        <button class="btn--filled" type="button">
+        <button class="button-signin" type="button" href="#">
           <div class="status-layer">
             <span>Đăng nhập</span>
           </div>
         </button>
 
-        <button class="btn--filled sec" type="button">
+        <button class="sec button-signup" type="button" href="#">
           <div class="status-layer">
             <span>Đăng ký</span>
           </div>
