--- a/src/views/partials/header-medium.ejs
+++ b/src/views/partials/header-medium.ejs
@@ -1,24 +1,24 @@
 <header>
   <div class="header-container">
-    <div class="header-container--top">
+    <div class="header-container__top">
       <div class="header-container__logo-img">
         <img src="/imgs/logo.svg" alt="Logo" />
       </div>
-      <div class="header-container__nav--top">
-        <a href="#">Trang chủ</a></li>
-        <a href="#">Thông báo</a></li>
+      <div class="header-container__nav-top">
+        <button href="#" class="status-layer">Trang chủ</button>
+        <button href="#" class="status-layer">Thông báo</button>
       </div>
       <div class="header-container__top-authenticator">
         <!-- Header with no login -->
 
-        <button type="button" class="button-signin">Đăng nhập</button>
-        <button type="button" class="button-signup">Đăng ký</button>
+        <button href="#" type="button" class="button-signin">Đăng nhập</button>
+        <button href="#" type="button" class="button-signup">Đăng ký</button>
 
         <!-- Header with Login-->
 
         <!-- <p>Chào,</p>
             <p>Giau Phan</p>
-            <img src="../img/row-1-column-6.png" alt="" /> -->
+            <img src="/imgs/milo.jpg" alt="avatar" /> -->
       </div>
     </div>
     <div>
