--- a/src/public/styles/partials/header-small-title.css
+++ b/src/public/styles/partials/header-small-title.css
@@ -3,8 +3,11 @@
 header {
     background-color: var(--primary-color-1);
     height: 112px;
-    display: inherit;
+    display: flex;
     align-items: center;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
 }
 
 .header-container {
@@ -31,4 +34,9 @@ header {
 .header-container__help {
     font-size: 1.375rem;
     color: var(--white);
+}
+
+.space {
+    width: 100%;
+    height: 112px;
 }
