--- a/src/public/styles/partials/header-small.css
+++ b/src/public/styles/partials/header-small.css
@@ -5,6 +5,10 @@ header {
     height: 112px;
     display: flex;
     align-items: center;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    position: fixed;
+    z-index: 100;
+    width: 100%;
 }
 
 .header-container {
@@ -13,6 +17,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 32px;
 }
 
 .header-container__img {
@@ -20,20 +25,13 @@ header {
     height: 48px;
 }
 
-.header-container__nav--top {
+.header-container__nav-top {
     width: 656px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     flex-direction: row;
-    gap: 48px;
-}
-
-.header-container__nav--top a {
-    font-size: 22px;
-    text-decoration: none;
-    font-weight: 500;
-    color: var(--white);
+    gap: 8px;
 }
 
 .header-container__top-authenticator {
@@ -43,6 +41,7 @@ header {
 }
 
 /* Header with no login*/
+.header-container__nav-top button,
 .header-container__top-authenticator button {
     width: 128px;
     height: 48px;
@@ -59,11 +58,18 @@ header {
             0 0 2px 0 rgba(0, 0, 0, 0.2);
     }
 }
+.header-container__nav-top button {
+    background-color: transparent;
+    color: var(--white);
+}
+
+.header-container__nav-top button:hover {
+    background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5));
+}
 
 .header-container__top-authenticator .button-signup {
     color: var(--white);
     background-color: var(--primary-color-4);
-    margin: 4px;
 
     &:hover {
         box-shadow:
@@ -78,19 +84,25 @@ header {
     right: 0;
     display: flex;
     align-items: center;
-    justify-content: space-around;
 }
 
 .header-container__top-authenticator img {
     width: 64px;
     height: 64px;
-    margin: 0 5px;
     border-radius: 100%;
 }
 
-.header-container__top-authenticator p {
-    margin: 0 5px;
-    font-size: 24px;
+.header-container__top-authenticator p,
+.header-container__top-authenticator span {
+    font-size: 18px;
     font-weight: 600;
     line-height: 32px;
+    white-space: nowrap;
+    color: var(--white);
+    margin: 0;
+}
+
+.space {
+    width: 100%;
+    height: 112px;
 }
