--- a/src/views/components/search-bar.ejs
+++ b/src/views/components/search-bar.ejs
@@ -10,12 +10,41 @@
       <input class="input_address" id="dateRange" type="text" value="" placeholder="Ngày nhận - Ngày trả" />
     </div>
 
-    <div class="search-address" style="border-left: 1px solid #90a6b1">
+    <div class="search-address search-address--dropdown" style="border-left: 1px solid #90a6b1">
       <span class="material-symbols-outlined"> person </span>
-      <input class="input_address" type="text" placeholder="1 người lớn - 0 trẻ em - 1 phòng" style="width: 250px" />
+      <div id="selected-options" class="input_address" type="text" style="width: 250px"></div>
     </div>
   </div>
   <button class="button--submit">Tìm kiếm</button>
+</div>
+<!-- Số lượng người lớn, trẻ em, phòng-->
+<div class="search-quality">
+  <div class="search-quality__adults">
+    <span>Người lớn</span>
+    <div class="counter--wraper">
+      <span class="minus minus-adults">-</span>
+      <input type="number" value="2" id="adult__quantity" class="quantity">
+      <span class="plus plus-adults">+</span>
+    </div>
+  </div>
+
+  <div class="search-quality__child">
+    <span>Trẻ em</span>
+    <div class="counter--wraper">
+      <span class="minus minus-children">-</span>
+      <input type="number" value="0" id="child__quantity" class="quantity">
+      <span class="plus plus-children">+</span>
+    </div>
+  </div>
+
+  <div class="search-quality__room">
+    <span>Phòng</span>
+    <div class="counter--wraper">
+      <span class="minus minus-rooms">-</span>
+      <input type="number" value="1" id="room__quantity" class="quantity">
+      <span class="plus plus-rooms">+</span>
+    </div>
+  </div>
 </div>
 
 <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
