--- a/src/views/partials/header-small.ejs
+++ b/src/views/partials/header-small.ejs
@@ -1,21 +1,23 @@
 <header>
   <div class="header-container">
     <img class="header-container__img" src="/imgs/logo.svg" alt="Logo" />
-    <div class="header-container__nav--top">
-      <a href="#">Trang chủ</a></li>
-      <a href="#">Thông báo</a></li>
+    <div class="header-container__nav-top">
+      <button href="#" class="status-layer">Trang chủ</button>
+      <button href="#" class="status-layer">Thông báo</button>
     </div>
     <div class="header-container__top-authenticator">
       <!-- Header with no login -->
-
+      <!-- 
       <button type="button" class="button-signin">Đăng nhập</button>
-      <button type="button" class="button-signup">Đăng ký</button>
+      <button type="button" class="button-signup">Đăng ký</button>    
+      -->
 
       <!-- Header with Login-->
 
-      <!-- <p>Chào,</p>
-            <p>Giau Phan</p>
-            <img src="../img/row-1-column-6.png" alt="" /> -->
+      <p>Chào,</p>
+      <span>Giau Phan</span>
+      <img src="/imgs/milo.jpg" alt="" />
     </div>
   </div>
 </header>
+<div class="space"></div>
