--- a/src/public/styles/components/search-bar.css
+++ b/src/public/styles/components/search-bar.css
@@ -177,21 +177,18 @@ input[type="number"]::-webkit-outer-spin-button {
     margin-left: 60%;
     margin-top: 2px;
     width: 300px;
-    height: 200px;
+    height: 170px;
     display: flex;
     flex-direction: column;
     gap: 12px;
     background-color: var(--white);
-    padding: 30px;
+    padding: 12px 30px;
     border-radius: 4px;
     font-weight: 700;
+    font-size: 16px;
     box-shadow:
         2px 1px 3px 1px rgba(0, 0, 0, 0.2),
         0 0 2px 0 rgba(0, 0, 0, 0.2);
-}
-
-.search-quality span {
-    font-size: 16px;
 }
 
 .search-quality__adults,
