some mini update for booking page

--- a/src/views/pages/booking/info.ejs
+++ b/src/views/pages/booking/info.ejs
@@ -187,17 +187,17 @@
 
             </div>
 
-            <div class="mt-12">
+            <div class="mt-16">
               <h4>Quyền lợi của bạn</h4>
               <div class="row mt-8">
                 <div class="col-1">
-                  <span class="material-symbols-outlined icon--filled">
+                  <span style="color:#119726" class="material-symbols-outlined icon--filled">
                     new_releases
                   </span>
                 </div>
                 <div class="col-11">
-                  <span style="display: block">Giảm giá 10%</span>
-                  <span style="display: block">Bạn được giảm 10% trên tổng giá trị trước khi áp dụng thuế và phí</span>
+                  <span style="display: block; color:#119726">Giảm giá 10%</span>
+                  <span style="display: block; color:#119726">Bạn được giảm 10% trên tổng giá trị trước khi áp dụng thuế và phí</span>
                 </div>
               </div>
             </div>
