--- a/src/public/styles/components/room.css
+++ b/src/public/styles/components/room.css
@@ -8,6 +8,7 @@
     flex-direction: column;
     border: 1px solid var(--outline-variant);
     border-radius: 8px;
+    background-color: var(--primary-color-3-o10);
 }
 
 .room p,
@@ -39,8 +40,9 @@
     display: inherit;
     flex-direction: column;
     gap: 12px;
+    padding: 12px;
     border-bottom-left-radius: 8px;
-    padding-bottom: 12px;
+    border-bottom-right-radius: 8px;
     background-color: var(--white);
 }
 
@@ -211,10 +213,19 @@ input[type="number"]::-webkit-inner-spin-button {
     border-radius: 8px;
 }
 
-.modal__view--big span {
+.modal__view--big button span {
+    text-align: center;
     font-size: 2rem;
+}
+
+.modal__view--big button {
+    width: 40px;
+    height: 40px;
+    box-sizing: border-box;
     background-color: var(--blue-gray);
-    border-radius: 6px;
+    border: none;
+    padding-top: 4px;
+    border-radius: 50%;
 }
 
 .modal__view--small {
@@ -222,11 +233,21 @@ input[type="number"]::-webkit-inner-spin-button {
     justify-content: space-between;
 }
 
-.modal__view--small img {
+.modal__view--small button {
     width: 150px;
     height: 86px;
-    object-fit: cover;
-    border-radius: 8px;
+    background-color: transparent;
+    border: none;
+}
+
+.modal__view--small button img {
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+}
+
+.modal__view--small button:focus {
+    border: 4px solid var(--primary-color-3);
 }
 
 .modal__detail {
