Up event for button Post and Save for accountPage

--- a/src/public/styles/pages/account/history.css
+++ b/src/public/styles/pages/account/history.css
@@ -4,6 +4,7 @@
 @import url("/styles/partials/footer.css");
 @import url("/styles/components/review-popup.css");
 @import url("/styles/components/next-page.css");
+@import url("/styles/components/success-popup.css");
 
 html {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
