--- a/src/views/components/review-popup.ejs
+++ b/src/views/components/review-popup.ejs
@@ -34,7 +34,7 @@
       <div class="form--submitbutton">
         <button class="form--submit1 closeBtn">Hủy</button>
 
-        <button class="form--submit2">Đăng</button>
+        <button class="form--submit2 post-btn">Đăng</button>
       </div>
     </div>
   </div>
