--- a/src/public/styles/components/success-popup.css
+++ b/src/public/styles/components/success-popup.css
@@ -1,3 +1,15 @@
+@import url("/styles/base.css");
+.modal-success {
+  position: fixed;
+  display: none;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
 .success-popup-container {
   position: absolute;
   width: 100%;
@@ -6,7 +18,7 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  background-color: rgba(0, 0, 0, 2);
+  animation: modalFadeIn ease 0.5s;
 }
 
 .success-popup__card {
@@ -39,8 +51,21 @@
   position: absolute;
   top: 24px;
   right: 24px;
+  cursor: pointer;
 }
 
 .success-popup__close-btn span {
   color: #00696d;
+}
+
+@keyframes modalFadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-200px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
