--- a/src/public/styles/pages/account/information.css
+++ b/src/public/styles/pages/account/information.css
@@ -1,6 +1,7 @@
 @import url("/styles/base.css");
 @import url("/styles/partials/header-medium.css");
 @import url("/styles/partials/footer.css");
+@import url("/styles/components/success-popup.css");
 
 html {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -157,8 +158,8 @@ hr {
 
 .profile-btn,
 .history-btn,
-.accountPayment-btn,
-.changePassword-btn,
+.account-payment-btn,
+.change-password-btn,
 .logout-btn {
     cursor: pointer;
 }
