--- a/src/views/components/success-popup.ejs
+++ b/src/views/components/success-popup.ejs
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="../../public/styles/components/success-popup.css">
-</head>
-
-<body>
+<div class="modal-success">
   <div class="success-popup-container">
     <div class="success-popup__card">
       <div class="success-popup__icon">
@@ -23,8 +12,14 @@
       <div class="success-popup__close-btn">
         <span class="material-symbols-outlined">cancel</span>
       </div>
-      </class=>
     </div>
-</body>
+  </div>
+</div>
+<script>
+  const closePopupBtn = document.querySelector(".success-popup__close-btn");
+  const modalSuccess = document.querySelector(".modal-success");
 
-</html>
+  closePopupBtn.addEventListener("click", () => {
+    modalSuccess.style.display = "none";
+  });
+</script>
