--- a/src/views/pages/account/history.ejs
+++ b/src/views/pages/account/history.ejs
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
   <title>2WAYS.com</title>
-  <link rel="stylesheet" href="/styles/pages/account/booking-history.css" />
+  <link rel="stylesheet" href="/styles/pages/account/history.css" />
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 
 </head>
@@ -59,6 +59,7 @@
       </div>
     </section>
   </main>
+  <%- include('../../components/success-popup')  %>
   <%- include('../../components/next-page.ejs') %>
   <%- include('../../components/review-popup.ejs') %>
   <%-include('../../partials/footer.ejs') %>
