--- a/src/views/pages/account/information.ejs
+++ b/src/views/pages/account/information.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-  <link rel="stylesheet" href="/styles/pages/account/index.css" />
+  <link rel="stylesheet" href="/styles/pages/account/information.css" />
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
   <title>2WAYS.com</title>
 </head>
@@ -79,7 +79,7 @@
       <div class="form__submitbutton">
         <!-- <button class="form--submit1">Hủy</button> -->
 
-        <button class="form--submit2 form--submit2-default">Sửa</button>
+        <button class="form--submit2 form--submit2-default ">Sửa</button>
       </div>
     </section>
     <!-- Sửa hồ sơ -->
@@ -120,10 +120,11 @@
       <div class="form__submitbutton">
         <button class="form--submit1 cancel-btn">Hủy</button>
 
-        <button class="form--submit2">Lưu</button>
+        <button id="save-btn" class="form--submit2">Lưu</button>
       </div>
     </section>
   </div>
+  <%- include('../../components/success-popup')  %>
 
   <%- include('../../partials/footer') %>
 
