--- a/src/public/styles/pages/account/error404.css
+++ b/src/public/styles/pages/account/error404.css
@@ -1,6 +1,11 @@
 @import url(../../partials/header-small.css);
 
+#main {
+  min-height: 100vh;
+}
 .error-page {
+    position: fixed;
+    inset: 0; 
   display: flex;
   align-items: center;
   justify-content: center;
@@ -24,7 +29,7 @@
   left: 0;
   right: 0;
   color: transparent;
-  
+
   background: -webkit-repeating-linear-gradient(
     -45deg,
     #71b7e6,
@@ -106,28 +111,13 @@
   }
 }
 
-a.back {
+.back {
   position: fixed;
   right: 40px;
   bottom: 40px;
-  background: -webkit-repeating-linear-gradient(
-    -45deg,
-    #71b7e6,
-    #69a6ce,
-    #b98acc,
-    #ee8176
-  );
-  border-radius: 5px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-  color: #fff;
-  font-size: 16px;
-  font-weight: bold;
   line-height: 24px;
-  padding: 15px 30px;
   text-decoration: none;
   transition: 0.25s all ease-in-out;
 }
 
-a.back:hover {
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
-}
+
