--- a/src/views/pages/account/error404.ejs
+++ b/src/views/pages/account/error404.ejs
@@ -1,41 +1,31 @@
 <!doctype html>
 
 <html lang="en">
-  <head>
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-1752YPLP7H"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
 
-      gtag("config", "G-1752YPLP7H");
-    </script>
-    <meta charset="UTF-8" />
+<head>
+  <meta charset="UTF-8" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <link rel="stylesheet" href="/styles/base.css">
   <link rel="stylesheet" href="/styles/pages/account/error404.css" />
   <title>2WAYS.com</title>
-  </head>
+</head>
 
-  <body>
+<body>
+  <div id="main">
     <%- include('../../partials/header-small') %>
-     <!--  -->
+    <!--  -->
     <div class="error-page">
       <div>
         <h1 data-h1="404">404</h1>
         <p data-p="BAD REQUEST">BAD REQUEST</p>
       </div>
     </div>
+    <button class="btn--filled sec back" type="button">
+      <div class="status-layer">
+        <span>Go back</span>
+      </div>
+    </button>
+  </div>
+</body>
 
-    <a href="#" class="back">GO BACK</a>
-
-    <div id="tsparticles"></div>
-
-  </body>
 </html>
