--- a/src/public/styles/components/otp.css
+++ b/src/public/styles/components/otp.css
@@ -1,3 +1,15 @@
+@import url("/styles/base.css");
+.modal-otp {
+  position: fixed;
+  display: none;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
 .otp {
   box-sizing: border-box;
 }
@@ -15,7 +27,8 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #000000;
+  overflow: hidden;
+  animation: modalFadeIn ease 0.5s;
 }
 
 .otp__notice {
@@ -115,4 +128,16 @@ h1 {
 .otp__button[disabled] {
   opacity: 0.6;
   cursor: default;
+}
+
+@keyframes modalFadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-200px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
