Update popup success for account/change-password

--- a/src/views/pages/account/change-password.ejs
+++ b/src/views/pages/account/change-password.ejs
@@ -79,8 +79,7 @@
 
         <div class="form__item">
           <h1>Xác nhận mật khẩu:</h1>
-          <input class="form-control form__password-confirm" type="text" placeholder="Nhập lại mật khẩu mới" />
-          <div class="error-message" id="error-message"></div>
+          <input class="form-control form__password-confirm" type="text" placeholder="Nhập lại mật khẩu mới" id="error-message" />
         </div>
       </div>
       <div class="form__submitbutton">
@@ -92,6 +91,8 @@
   </div>
 
   <%- include('../../partials/footer.ejs') %>
+  <%- include('../../components/success-popup.ejs') %>
+
 
   <script src="/scripts/change-password.js"></script>
   <script src="/scripts/search-bar.js"></script>
