--- a/src/public/styles/components/room-in-hs.css
+++ b/src/public/styles/components/room-in-hs.css
@@ -1,46 +1,45 @@
 @import url("/styles/base.css");
 
-.room__in__hs {
+.room-in-hs {
     height: 307px;
     width: 804px;
     display: flex;
-    gap: 32px;
+    justify-content: space-between;
     background-color: var(--white);
     border: 1px solid var(--outline-variant);
     border-radius: 8px;
     margin: 6px 0;
+    padding: 24px;
 }
 
-.room__in__hs_img img {
-    height: 305px;
-    width: 280px;
-    border-radius: 8px;
+.room-in-hs__detail {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 15px;
 }
 
-.room__in__title {
-    width: 546px;
+.room-in-hs__detail label {
+    font-weight: 600;
+}
+
+.room-in__status {
+    text-align: end;
+    font-size: 14px;
+}
+
+.room-in__title {
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 12px;
-    padding: 16px;
     justify-content: space-around;
 }
 
-.room__in__title h1 {
+.room-in__title h1 {
     font-size: 24px;
     font-weight: 700;
-    margin: 0;
-    padding: 0;
-}
-
-.quantity__bed__guest {
-    display: flex;
-    font-weight: 500px;
-    font-size: 22px;
-    gap: 8px;
-}
-
-.quantity__bed__guest p {
     margin: 0;
     padding: 0;
 }
@@ -91,7 +90,7 @@
     font-weight: 500;
 }
 
-.button-room__in__hs {
+.button-room-in-hs {
     display: flex;
     gap: 8px;
     justify-content: flex-end;
