--- a/src/views/pages/account/card.ejs
+++ b/src/views/pages/account/card.ejs
@@ -81,6 +81,8 @@
   <script src="/scripts/credit-account-popup.js"></script>
   <script src="/scripts/search-bar.js"></script>
   <script src="/scripts/otp.js" defer></script>
+  <script src="/scripts/header-medium.js"></script>
+
 
 </body>
 
