--- a/src/views/pages/account/change-password.ejs
+++ b/src/views/pages/account/change-password.ejs
@@ -96,6 +96,8 @@
 
   <script src="/scripts/change-password.js"></script>
   <script src="/scripts/search-bar.js"></script>
+  <script src="/scripts/header-medium.js"></script>
+
 
 </body>
 
