--- a/src/public/styles/partials/header-small.css
+++ b/src/public/styles/partials/header-small.css
@@ -20,11 +20,6 @@ header {
     gap: 32px;
 }
 
-.header-container__img {
-    width: 168px;
-    height: 48px;
-}
-
 .header-container__nav-top {
     width: 656px;
     display: flex;
@@ -90,6 +85,7 @@ header {
     width: 64px;
     height: 64px;
     border-radius: 100%;
+    cursor: pointer;
 }
 
 .header-container__top-authenticator p,
@@ -105,4 +101,17 @@ header {
 .space {
     width: 100%;
     height: 112px;
+}
+
+.name-btn-hs,
+.avatar-btn-hs {
+    cursor: pointer;
+}
+
+.name-btn-hs:hover {
+    opacity: 0.7;
+}
+
+.avatar-btn-hs {
+    position: relative;
 }
