--- a/src/views/pages/account/card-fill.ejs
+++ b/src/views/pages/account/card-fill.ejs
@@ -101,6 +101,7 @@
   <script src="/scripts/bank-account-popup.js"></script>
   <script src="/scripts/credit-account-popup.js"></script>
   <script src="/scripts/search-bar.js"></script>
+  <script src="/scripts/header-medium.js"></script>
 
 </body>
 
