--- a/src/views/pages/account/history.ejs
+++ b/src/views/pages/account/history.ejs
@@ -67,6 +67,8 @@
   <script src="/scripts/booking-history.js" defer></script>
   <script script src="/scripts/review-popup.js"></script>
   <script src="/scripts/search-bar.js"></script>
+  <script src="/scripts/header-medium.js"></script>
+
 
 </body>
 
