--- a/src/views/pages/account/information.ejs
+++ b/src/views/pages/account/information.ejs
@@ -130,6 +130,8 @@
 
   <script src="/scripts/account-page.js"></script>
   <script src="/scripts/search-bar.js"></script>
+  <script src="/scripts/header-medium.js"></script>
+
 
 
 </body>
