--- a/src/views/partials/header-medium.ejs
+++ b/src/views/partials/header-medium.ejs
@@ -2,23 +2,24 @@
   <div class="header-container">
     <div class="header-container__top">
       <div class="header-container__logo-img">
-        <img src="/imgs/logo.svg" alt="Logo" />
+        <img src="/imgs/logo.svg" alt="Logo" class="logo-click-hm" />
       </div>
       <div class="header-container__nav-top">
-        <button href="#" class="status-layer">Trang chủ</button>
-        <button href="#" class="status-layer">Thông báo</button>
+        <button href="#" class="status-layer homepage-btn-hm">Trang chủ</button>
+        <button href="#" class="status-layer noti-btn-hm">Thông báo</button>
       </div>
       <div class="header-container__top-authenticator">
         <!-- Header with no login -->
-
-        <button href="#" type="button" class="button-signin">Đăng nhập</button>
-        <button href="#" type="button" class="button-signup">Đăng ký</button>
+        <!-- 
+        <button href="#" type="button" class="button-signin signin-btn-hm">Đăng nhập</button>
+        <button href="#" type="button" class="button-signup signup-btn-hm">Đăng ký</button>
+      -->
 
         <!-- Header with Login-->
 
-        <!-- <p>Chào,</p>
-            <p>Giau Phan</p>
-            <img src="/imgs/milo.jpg" alt="avatar" /> -->
+        <p>Chào,</p>
+        <p class="name-btn-hm">Giau Phan</p>
+        <img class="avatar-btn-hm" src="/imgs/milo.jpg" alt="avatar" />
       </div>
     </div>
     <div>
