--- a/src/views/partials/header-small-title.ejs
+++ b/src/views/partials/header-small-title.ejs
@@ -1,6 +1,6 @@
 <header>
   <div class="header-container">
-    <img class="header-container__img" src="/imgs/logo.svg" alt="Logo" />
+    <img class="header-container__img logo-click-hst" src="/imgs/logo.svg" alt="Logo" />
     <p class="header-container__title"><%= title %></p>
     <a href="#" class="header-container__help">Bạn cần sự trợ giúp?</a>
   </div>
