--- a/src/views/partials/header-small.ejs
+++ b/src/views/partials/header-small.ejs
@@ -1,22 +1,22 @@
 <header>
   <div class="header-container">
-    <img class="header-container__img" src="/imgs/logo.svg" alt="Logo" />
+    <img class="header-container__img logo-click-hs" src="/imgs/logo.svg" alt="Logo" />
     <div class="header-container__nav-top">
-      <button href="#" class="status-layer">Trang chủ</button>
-      <button href="#" class="status-layer">Thông báo</button>
+      <button href="#" class="status-layer homepage-btn-hs">Trang chủ</button>
+      <button href="#" class="status-layer noti-btn-hs">Thông báo</button>
     </div>
     <div class="header-container__top-authenticator">
       <!-- Header with no login -->
       <!-- 
-      <button type="button" class="button-signin">Đăng nhập</button>
-      <button type="button" class="button-signup">Đăng ký</button>    
+      <button type="button" class="button-signin signin-btn-hs">Đăng nhập</button>
+      <button type="button" class="button-signup signup-btn-hs">Đăng ký</button>    
       -->
 
       <!-- Header with Login-->
 
       <p>Chào,</p>
-      <span>Giau Phan</span>
-      <img src="/imgs/milo.jpg" alt="" />
+      <span class="name-btn-hs">Giau Phan</span>
+      <img src="/imgs/milo.jpg" alt="avatar" class="avatar-btn-hs" />
     </div>
   </div>
 </header>
