Refactor authuser.model,js, accommodation.model.js

--- a/src/views/pages/account/information.ejs
+++ b/src/views/pages/account/information.ejs
@@ -80,7 +80,7 @@
 
             <hr />
 
-            <div class="form--items">
+            <form class="form--items">
                 <div class="form--item">
                     <h1>Họ và tên:</h1>
                     <input class="form-control" type="text" placeholder="<%= data.first_name %> <%= data.last_name %>" />
@@ -105,7 +105,7 @@
                         <option value="Other">Khác</option>
                     </select>
                 </div>
-            </div>
+            </form>
             <div class="form--submitbutton">
                 <button class="form--submit1 cancel-btn">Hủy</button>
                 <button class="form--submit2">Lưu</button>
