--- a/src/views/partials/header-full.ejs
+++ b/src/views/partials/header-full.ejs
@@ -10,21 +10,17 @@
             </div>
             <div class="top-authenticator">
                 <!-- Header with no login -->
-
-                <!-- <button type="button" class="button-signin">Đăng nhập</button>
-        <button type="button" class="button-signup">Đăng ký</button> -->
-
-                <button class="btn--filled" type="button">
+                <a class="btn--filled" type="button" href="/auth/login">
                     <div class="status-layer">
                         <span>Đăng nhập</span>
                     </div>
-                </button>
+                </a>
 
-                <button class="btn--filled sec" type="button">
+                <a class="btn--filled sec" type="button" href="/auth/register">
                     <div class="status-layer">
                         <span>Đăng ký</span>
                     </div>
-                </button>
+                </a>
 
                 <!-- Header with login -->
 
