--- a/src/views/pages/notification/promotion.ejs
+++ b/src/views/pages/notification/promotion.ejs
@@ -29,12 +29,7 @@
 
         <section class="nofi__main">
             <button class="btn--outlined pri" type="submit">Đánh dấu tất cả là đã đọc</button>
-            <%- include('../../components/noti-item-promo') %>
-            <%- include('../../components/noti-item-promo') %>
-            <%- include('../../components/noti-item-promo') %>
-            <%- include('../../components/noti-item-promo') %>
-            <%- include('../../components/noti-item-promo') %>
-            <%- include('../../components/noti-item-promo') %>
+            <%- include('../../components/noti-item-promo',data_noti[0]) %>
         </section>
     </main>
 
