--- a/src/views/components/credit-account-popup.ejs
+++ b/src/views/components/credit-account-popup.ejs
@@ -1,7 +1,7 @@
 <div class="modal2" style="display: none;">
     <div class="credit-container">
         <div class="credit">
-            <form class="credit__card" action="payment-addDebitCard" method="POST">
+            <form class="credit__card" action="/account/card/addDebit" method="POST">
                 <h1>Thêm thẻ tín dụng/ghi nợ</h1>
                 <div class="credit__secure">
                     <div class="icon">
