--- a/src/views/pages/account/payment.ejs
+++ b/src/views/pages/account/payment.ejs
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
     <title>2WAYS.com</title>
     <link rel="stylesheet" href="/styles/pages/account/payment.css" />
 </head>
@@ -53,6 +55,10 @@
                         <h1>Thẻ tín dụng/ghi nợ</h1>
                         <button class="debit-credit-card--submit addCreditAccountBtn">+ Thêm thẻ mới</button>
                     </div>
+                    <% data_card.forEach(function(card){%>
+                    <%= card.NAME %>
+                    <%}) %>
+
                     <h2>Bạn chưa liên kết thẻ tín dụng/ghi nợ</h2>
                 </div>
 
