--- a/src/views/partials/header-full.ejs
+++ b/src/views/partials/header-full.ejs
@@ -11,10 +11,7 @@
       <div class="header-container__top-authenticator">
         <!-- Header with no login -->
 
-        <!-- <button type="button" class="button-signin">Đăng nhập</button>
-        <button type="button" class="button-signup">Đăng ký</button> -->
-
-        <button class="button-signin signin-btn-hf" type="button" href="#">
+        <!-- <button class="button-signin signin-btn-hf" type="button" href="#">
           <div class="status-layer">
             <span>Đăng nhập</span>
           </div>
@@ -24,13 +21,14 @@
           <div class="status-layer">
             <span>Đăng ký</span>
           </div>
-        </button>
+        </button> -->
 
         <!-- Header with login -->
 
-        <!-- <p>Chào,</p>
-            <p>Giau Phan</p>
-            <img src="../img/row-1-column-6.png" alt="" /> -->
+        <p>Chào,</p>
+        <p class="name-click-hf">Giau Phan</p>
+        <img src="/imgs/milo.jpg" alt="avatar" class="avatar-click-hf">
+
       </div>
     </div>
 
