--- a/src/views/partials/header-full.ejs
+++ b/src/views/partials/header-full.ejs
@@ -9,7 +9,7 @@
         <button href="#" class="status-layer noti-btn-hf">Thông báo</button>
       </div>
       <div class="header-container__top-authenticator">
-        <!-- Header with no login -->
+        <!-- Header full with no login -->
 
         <!-- <button class="button-signin signin-btn-hf" type="button" href="#">
           <div class="status-layer">
@@ -23,7 +23,7 @@
           </div>
         </button> -->
 
-        <!-- Header with login -->
+        <!-- Header full with login -->
 
         <p>Chào,</p>
         <p class="name-click-hf">Giau Phan</p>
