Reset header-full.ejs

--- a/src/views/partials/header-full.ejs
+++ b/src/views/partials/header-full.ejs
@@ -10,19 +10,17 @@
             </div>
             <div class="top-authenticator">
                 <!-- Header with no login -->
-                <a class="btn--filled" type="button" href="/auth/login">
+                <button class="btn--filled" type="button" href="/auth/login">
                     <div class="status-layer">
                         <span>Đăng nhập</span>
                     </div>
-                </a>
+                </button>
 
-                <a class="btn--filled sec" type="button" href="/auth/register">
+                <button class="btn--filled sec" type="button" href="/auth/register">
                     <div class="status-layer">
                         <span>Đăng ký</span>
                     </div>
-                </a>
-
-                <!-- Header with login -->
+                </button>
 
                 <!-- <p>Chào,</p>
             <p>Giau Phan</p>
