--- a/src/public/styles/base.css
+++ b/src/public/styles/base.css
@@ -25,8 +25,10 @@
   --gray-o30: rgba(217, 217, 217, 0.3);
   --dark-gray: #6f7979;
   --blue-gray: #90a6b1;
+  --mint-grey: #a9acab;
   --purple: #4d5f7c;
   --light-gray: #ebebeb;
+  --medium-gray: #c4c7c7;
 }
 
 html {
