--- a/src/views/pages/notification/promotion.ejs
+++ b/src/views/pages/notification/promotion.ejs
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
     <title>2WAYS.com</title>
     <link rel="stylesheet" href="/styles/pages/notification/promotion.css" />
 </head>
@@ -28,7 +30,9 @@
         </aside>
 
         <section class="nofi__main">
-            <button class="btn--outlined pri" type="submit">Đánh dấu tất cả là đã đọc</button>
+            <form action="/notifications/read-all" method="post">
+                <button class="btn--outlined pri" type="submit">Đánh dấu tất cả là đã đọc</button>
+            </form>
             <%- include('../../components/noti-item-promo',data_noti[0]) %>
         </section>
     </main>
