--- a/src/public/styles/pages/site/about.css
+++ b/src/public/styles/pages/site/about.css
@@ -3,8 +3,8 @@
 @import url("/styles/partials/nav-tree.css");
 @import url("/styles/partials/footer.css");
 
-.about__container {
-  width: 100%;
+.container--about {
+  width: 80%;
   max-width: 1152px;
   padding: 0;
   margin: auto;
