Up code test ejs and site controller

--- a/src/public/styles/partials/header-full.css
+++ b/src/public/styles/partials/header-full.css
@@ -8,6 +8,7 @@ header {
   width: 100%;
   background-image: url(/imgs/bg-header.png);
   height: 484px;
+  object-fit: contain;
   position: no-repeat;
   position: contain;
   background-color: var(--primary-color-1);
