--- a/src/views/pages/auth/register.ejs
+++ b/src/views/pages/auth/register.ejs
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <%- include('../../partials/header-small-title', {title}) %>
+    <%- include('../../partials/header-small-title') %>
 
     <main class="content-container">
         <section class="intro">
