--- a/src/views/partials/header-medium.ejs
+++ b/src/views/partials/header-medium.ejs
@@ -9,6 +9,15 @@
         <button href="#" class="status-layer noti-btn-hm">Thông báo</button>
       </div>
       <div class="header-container__top-authenticator">
+        <% if(status === 'success'){ %>
+        <p>Chào,</p>
+        <p class="name-btn-hm">data</p>
+        <img src="/imgs/milo.jpg" alt="avatar" class="avatar-btn-hm"/>
+        <% } else{ %>
+        <button type="button" class="button-signin signin-btn-hm">Đăng nhập</button>
+        <button type="button" class="button-signup signup-btn-hm">Đăng ký</button>
+        <% } %>
+
         <!-- Header with no login -->
         <!-- 
         <button href="#" type="button" class="button-signin signin-btn-hm">Đăng nhập</button>
@@ -17,9 +26,9 @@
 
         <!-- Header with Login-->
 
-        <p>Chào,</p>
+        <!-- <p>Chào,</p>
         <p class="name-btn-hm">Giau Phan</p>
-        <img class="avatar-btn-hm" src="/imgs/milo.jpg" alt="avatar" />
+        <img class="avatar-btn-hm" src="/imgs/milo.jpg" alt="avatar" /> -->
       </div>
     </div>
     <div>
