--- a/src/views/pages/site/index.ejs
+++ b/src/views/pages/site/index.ejs
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="/styles/base.css">
     <link rel="stylesheet" href="/styles/pages/site/index.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
-
 </head>
 
 <body>
     <%- include('../../partials/header-full') %>
+    <%- include('../../components/on-top-btn') %>
     <main>
         <section id="discover-section" class="mt-64 primary-text">
             <h1 class="section__title">Khám phá về 2Ways</h1>
@@ -124,8 +124,9 @@
     <%- include('../../partials/footer') %>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="/scripts/search-bar.js"></script>
     <script src="/scripts/header-full.js"></script>
+    <script src="/scripts/search-bar.js"></script>
+    <script src="/scripts/base.js"></script>
 
 </body>
 
