Add header-small.js into /src/views/pages/site/about.ejs

--- a/src/views/pages/site/about.ejs
+++ b/src/views/pages/site/about.ejs
@@ -119,5 +119,5 @@
     <div class="mt-12"></div>
     <%- include('../../partials/footer') %>
 </body>
-
+<script src="/scripts/header-small.js"></script>
 </html>
